--- a/index.html
+++ b/index.html
@@ -3,40 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Control de Finanzas</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Gestión de Ingresos y Gastos</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        #mensaje-error {
+            color: red;
+            font-size: 1.1em;
+            margin-bottom: 10px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        table, th, td {
+            border: 1px solid black;
+        }
+        th, td {
+            padding: 8px;
+            text-align: left;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Control de Finanzas</h1>
-        
-        <h2>Registro de Ingresos</h2>
-        <input type="text" id="fuente" placeholder="Fuente del ingreso">
-        <input type="number" id="monto-ingreso" placeholder="Monto">
-        <input type="date" id="fecha-ingreso">
-        <button onclick="agregarIngreso()">Agregar Ingreso</button>
-        <ul id="lista-ingresos"></ul>
-        
-        <h2>Registro de Gastos</h2>
-        <input type="text" id="descripcion" placeholder="Descripción del gasto">
-        <input type="number" id="monto" placeholder="Monto">
-        <select id="categoria">
-            <option value="Alimentación">Alimentación</option>
-            <option value="Transporte">Transporte</option>
-            <option value="Entretenimiento">Entretenimiento</option>
-            <option value="Otros">Otros</option>
-        </select>
-        <input type="date" id="fecha-gasto">
-        <button onclick="agregarGasto()">Agregar Gasto</button>
-        <ul id="lista-gastos"></ul>
+    <h1>Gestión de Ingresos y Gastos</h1>
+    <div id="mensaje-error"></div>
 
-        <h3>Total Ingresos: S/ <span id="total-ingresos">0.00</span></h3>
-        <h3>Total Gastos: S/ <span id="total-gastos">0.00</span></h3>
-        <h3>Saldo Disponible: S/ <span id="saldo">0.00</span></h3>
+    <h3>Agregar Ingreso</h3>
+    <form id="form-ingreso">
+        <label for="fuente">Fuente: </label><input type="text" id="fuente" required><br>
+        <label for="monto-ingreso">Monto: </label><input type="number" id="monto-ingreso" required><br>
+        <label for="fecha-ingreso">Fecha: </label><input type="date" id="fecha-ingreso" required><br>
+        <button type="button" onclick="agregarIngreso()">Agregar Ingreso</button>
+    </form>
 
-        <button id="btn-descargar" onclick="descargarExcel()">Descargar Reporte Excel</button>
-    </div>
+    <h3>Agregar Gasto</h3>
+    <form id="form-gasto">
+        <label for="descripcion">Descripción: </label><input type="text" id="descripcion" required><br>
+        <label for="monto">Monto: </label><input type="number" id="monto" required><br>
+        <label for="categoria">Categoría: </label><input type="text" id="categoria" required><br>
+        <label for="fecha-gasto">Fecha: </label><input type="date" id="fecha-gasto" required><br>
+        <button type="button" onclick="agregarGasto()">Agregar Gasto</button>
+    </form>
 
-    <script src="script.js"></script>  <!-- Vinculando el archivo JavaScript -->
+    <h3>Resumen</h3>
+    <div id="total-ingresos"></div>
+    <div id="total-gastos"></div>
+    <div id="balance"></div>
+
+    <h3>Lista de Ingresos</h3>
+    <ul id="lista-ingresos"></ul>
+
+    <h3>Lista de Gastos</h3>
+    <ul id="lista-gastos"></ul>
+
+    <h3>Descargar Reporte Excel</h3>
+    <button onclick="exportarExcel()">Descargar Reporte Excel</button>
+
+    <script src="app.js"></script>
 </body>
 </html>
