--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             font-family: Arial, sans-serif;
             margin: 20px;
         }
+        .formulario {
+            margin-bottom: 20px;
+        }
         #mensaje-error {
             color: red;
             font-size: 1.1em;
@@ -25,40 +28,50 @@
             padding: 8px;
             text-align: left;
         }
+        button {
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
     <h1>Gestión de Ingresos y Gastos</h1>
+
+    <!-- Mensaje de error -->
     <div id="mensaje-error"></div>
 
-    <h3>Agregar Ingreso</h3>
-    <form id="form-ingreso">
-        <label for="fuente">Fuente: </label><input type="text" id="fuente" required><br>
-        <label for="monto-ingreso">Monto: </label><input type="number" id="monto-ingreso" required><br>
-        <label for="fecha-ingreso">Fecha: </label><input type="date" id="fecha-ingreso" required><br>
+    <!-- Formulario de Ingreso -->
+    <div class="formulario">
+        <h3>Agregar Ingreso</h3>
+        <label for="fuente">Fuente: </label><input type="text" id="fuente"><br>
+        <label for="monto-ingreso">Monto: </label><input type="number" id="monto-ingreso"><br>
+        <label for="fecha-ingreso">Fecha: </label><input type="date" id="fecha-ingreso"><br>
         <button type="button" onclick="agregarIngreso()">Agregar Ingreso</button>
-    </form>
+    </div>
 
-    <h3>Agregar Gasto</h3>
-    <form id="form-gasto">
-        <label for="descripcion">Descripción: </label><input type="text" id="descripcion" required><br>
-        <label for="monto">Monto: </label><input type="number" id="monto" required><br>
-        <label for="categoria">Categoría: </label><input type="text" id="categoria" required><br>
-        <label for="fecha-gasto">Fecha: </label><input type="date" id="fecha-gasto" required><br>
+    <!-- Formulario de Gasto -->
+    <div class="formulario">
+        <h3>Agregar Gasto</h3>
+        <label for="descripcion">Descripción: </label><input type="text" id="descripcion"><br>
+        <label for="monto">Monto: </label><input type="number" id="monto"><br>
+        <label for="categoria">Categoría: </label><input type="text" id="categoria"><br>
+        <label for="fecha-gasto">Fecha: </label><input type="date" id="fecha-gasto"><br>
         <button type="button" onclick="agregarGasto()">Agregar Gasto</button>
-    </form>
+    </div>
 
+    <!-- Resumen -->
     <h3>Resumen</h3>
-    <div id="total-ingresos"></div>
-    <div id="total-gastos"></div>
-    <div id="balance"></div>
+    <div id="total-ingresos">Total Ingresos: S/ 0.00</div>
+    <div id="total-gastos">Total Gastos: S/ 0.00</div>
+    <div id="balance">Balance: S/ 0.00</div>
 
+    <!-- Listas de Ingresos y Gastos -->
     <h3>Lista de Ingresos</h3>
     <ul id="lista-ingresos"></ul>
 
     <h3>Lista de Gastos</h3>
     <ul id="lista-gastos"></ul>
 
+    <!-- Descargar Reporte -->
     <h3>Descargar Reporte Excel</h3>
     <button onclick="exportarExcel()">Descargar Reporte Excel</button>
 
