--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Control de Finanzas</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="estilos.css"> <!-- Aquí vinculamos el archivo CSS -->
 </head>
 <body>
     <div class="container">
@@ -36,7 +37,6 @@
         <button id="btn-descargar" onclick="descargarExcel()">Descargar Reporte Excel</button>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.4/xlsx.full.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
