--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div class="container">
+        <button id="modo-oscuro-toggle">🌙 Modo Oscuro</button>
         <h1>Control de Finanzas</h1>
         
         <h2>Registro de Ingresos</h2>
