--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Control de Finanzas</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
+        <!-- Botón para activar el modo oscuro -->
         <button id="modo-oscuro-toggle">🌙 Modo Oscuro</button>
+
         <h1>Control de Finanzas</h1>
         
         <h2>Registro de Ingresos</h2>
